# distributed-async-statics

./: Cargo.toml  README.md
examples/: demo.rs  sqlx.rs
src/: lib.rs
