[package]
name = "const-to-static-table"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"

[dev-dependencies]
pollster = "0.4.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
